--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "keywords": [
     "ethereum",
     "blockchain",
-    "sushiswap"
+    "sushiswap",
+    "sdk"
   ],
   "dependencies": {
     "bignumber.js": "^9.0.1",
@@ -43,6 +44,8 @@
     "eslint-plugin-promise": "^4.3.1",
     "ethereum-abi-types-generator": "^1.0.10",
     "jest": "^26.6.3",
+    "jsbi": "^3.1.1",
+    "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
     "ts-jest": "^26.5.4",
     "tsdx": "^0.14.1",
     "tslib": "^1.14.1",
