build(ts): es2020

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,24 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "lib": ["dom", "esnext"],
-    "module": "esnext",
-    "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
-     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+		"target": "esnext",
+		"module": "none",
+		"moduleResolution": "node",
+		"rootDir": "source",
+		"strict": true,
+		"sourceMap": true,
+		"inlineSources": true,
+		"declaration": true,
+		"declarationMap": true,
+		"noEmit": true,
+		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"noImplicitReturns": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"esModuleInterop": true,
+		"lib": [ "esnext" ],
   },
   "include": ["src/abi/**/*.json", "src/**/*"],
   "exclude": ["node_modules","lib/*.ts", "**/*.spec.ts", "**/*.mock.ts", "src/jest/**/*"]
