--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,25 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-		"target": "esnext",
-		"module": "ESNext",
-		"moduleResolution": "node",
-		"rootDir": "source",
-		"strict": true,
-		"sourceMap": true,
-		"inlineSources": true,
-		"declaration": true,
-		"declarationMap": true,
-		"noEmit": true,
-		"noImplicitAny": true,
-		"noImplicitThis": true,
-		"noImplicitReturns": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"esModuleInterop": true,
-		"lib": [ "esnext" ],
-  },
-  "include": ["src/abi/**/*.json", "src/**/*"],
-  "exclude": ["node_modules","lib/*.ts", "**/*.spec.ts", "**/*.mock.ts", "src/jest/**/*"]
+    "compilerOptions": {
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "target": "esnext",
+        "module": "ESNext",
+        "moduleResolution": "node",
+        "rootDir": "src",
+        "strict": true,
+        "sourceMap": true,
+        "inlineSources": true,
+        "declaration": true,
+        "declarationMap": true,
+        "noEmit": true,
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "noImplicitReturns": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "esModuleInterop": true,
+        "lib": ["esnext"],
+    },
+    "include": ["src/abi/**/*.json", "src/**/*"],
+    "exclude": ["node_modules", "lib/*.ts", "**/*.spec.ts", "**/*.mock.ts", "src/jest/**/*"]
 }
